--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": ["node6", "react"]
+    "presets": ["es2015", "react", "stage-1"],
+    "plugins": ["transform-decorators-legacy"]
 }
