--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MicroProxy GUI written in reactjs with electron.",
   "main": "main.js",
   "scripts": {
+    "build-dev": "webpack -d",
     "build": "webpack -p",
     "start": "electron ./",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,15 +15,18 @@
     "zmq": "^2.15.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "electron-prebuilt": "^1.2.3",
+    "material-ui": "^0.15.1",
     "mobx": "^2.3.2",
     "mobx-react": "^3.3.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "babel-cli": "^6.10.1",
-    "babel-loader": "^6.2.4",
-    "babel-preset-node6": "^11.0.0",
-    "babel-preset-react": "^6.5.0",
-    "electron-prebuilt": "^1.2.3",
     "webpack": "^1.13.1"
   }
 }
