--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mobx-react": "^3.3.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.13.1"
   }
 }
